[gd_scene load_steps=15 format=3 uid="uid://balodqhfj5pj3"]

[ext_resource type="Script" uid="uid://bkiatc143qsnp" path="res://scripts/gui/gui.gd" id="1_0fbet"]
[ext_resource type="Texture2D" uid="uid://dyq75clqrse1h" path="res://assets/gui/ui-adventure/minimap_ring_brown_detail.png" id="2_ioifv"]
[ext_resource type="Texture2D" uid="uid://ctudwtb3qq5jg" path="res://assets/gui/ui-adventure/minimap_compass_toon_n.png" id="3_q46mf"]
[ext_resource type="Texture2D" uid="uid://6r2enbextcew" path="res://assets/gui/ui-adventure/minimap_compass_toon_s.png" id="4_ytf3d"]
[ext_resource type="Texture2D" uid="uid://cdqtjkc7ao1xk" path="res://assets/gui/ui-adventure/minimap_compass_toon_e.png" id="5_bk7cs"]
[ext_resource type="Texture2D" uid="uid://bkfc3jdh67dmb" path="res://assets/gui/ui-adventure/minimap_compass_toon_w.png" id="6_kvi6p"]
[ext_resource type="Texture2D" uid="uid://cs7ory4pceeli" path="res://assets/gui/ui-adventure/minimap_arrow_a.png" id="7_bk7cs"]
[ext_resource type="Script" uid="uid://djo8cqueirt8b" path="res://scripts/menu.gd" id="8_4q42c"]
[ext_resource type="Texture2D" uid="uid://g5kgt7lnwfw0" path="res://assets/gui/fanatisy-magic-set/bag-h-48.png" id="8_kvi6p"]
[ext_resource type="Script" uid="uid://dbsmc7uqhq2bx" path="res://scripts/gui/bag.gd" id="9_xqkfk"]
[ext_resource type="Script" uid="uid://ci8ygrslxb0ka" path="res://scripts/gui/item.gd" id="11_s1h2m"]
[ext_resource type="Texture2D" uid="uid://bdwj56k1xgcnx" path="res://assets/imgs/treasures-h-48.png" id="12_22my7"]
[ext_resource type="Texture2D" uid="uid://pgvj03mb7u4r" path="res://assets/gui/fanatisy-magic-set/parchment-h-48.png" id="13_qv6l0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yw5qc"]
bg_color = Color(0.101960786, 0.101960786, 0.101960786, 0.6)

[node name="Gui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_0fbet")

[node name="DebugInfo" type="Label" parent="."]
layout_mode = 1
offset_right = 85.0
offset_bottom = 49.0
text = "PlayerPosition
FPS"

[node name="Dialog" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Dialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Dialog/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Title" type="Label" parent="Dialog/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_yw5qc")
text = "Title"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Dialog/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Ceci est un essai de text

Sur plusieurs lignes en plus"

[node name="CloseDialogButton" type="Button" parent="Dialog/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fermer"

[node name="DialogAndImg" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Panel" type="Panel" parent="DialogAndImg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="DialogAndImg/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="DialogAndImg/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Title" type="Label" parent="DialogAndImg/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_yw5qc")
text = "Title"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DialogAndImg/Panel/MarginContainer/VBoxContainer"]
layout_direction = 2
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="DialogAndImg/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Ceci est un essai de text

Sur plusieurs lignes en plus"

[node name="TextureRect" type="TextureRect" parent="DialogAndImg/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 3
stretch_mode = 5

[node name="CloseDialogButton" type="Button" parent="DialogAndImg/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fermer"

[node name="Compass" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -125.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 125.0
grow_horizontal = 0

[node name="CompassBase" type="TextureRect" parent="Compass"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ioifv")
expand_mode = 1

[node name="N" type="TextureRect" parent="Compass"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -10.0
offset_right = 10.0
offset_bottom = 20.0
grow_horizontal = 2
texture = ExtResource("3_q46mf")
expand_mode = 1

[node name="S" type="TextureRect" parent="Compass"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -20.0
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_ytf3d")
expand_mode = 1

[node name="E" type="TextureRect" parent="Compass"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("5_bk7cs")
expand_mode = 1

[node name="O" type="TextureRect" parent="Compass"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
grow_vertical = 2
texture = ExtResource("6_kvi6p")
expand_mode = 1

[node name="Arrow" type="TextureRect" parent="Compass"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(16, 16)
texture = ExtResource("7_bk7cs")

[node name="Input" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Input"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Input/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Input/Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="Input/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Titre"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Input/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ValidateButton" type="Button" parent="Input/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Valider"

[node name="InputYesNo" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="InputYesNo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="InputYesNo/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="InputYesNo/Panel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="InputYesNo/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Titre"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="InputYesNo/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Ceci est un essai de text

Sur plusieurs lignes en plus"

[node name="HBoxContainer" type="HBoxContainer" parent="InputYesNo/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NoButton" type="Button" parent="InputYesNo/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Non"

[node name="YesButton" type="Button" parent="InputYesNo/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Oui"

[node name="Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("8_4q42c")

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -46.0
offset_top = -42.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2

[node name="BagButton" type="TextureButton" parent="Menu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Inventaire"
texture_normal = ExtResource("8_kvi6p")

[node name="Bag" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -10.0
offset_right = -10.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("9_xqkfk")

[node name="Panel" type="Panel" parent="Bag"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Bag/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Bag/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Title" type="Label" parent="Bag/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_yw5qc")
text = "Sac"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Bag/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="Bag/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fermer"

[node name="Items" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = -100.0
offset_right = -100.0

[node name="TresorBarbeDrue" type="TextureButton" parent="Items"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
tooltip_text = "Trésor de Barbe Drue"
texture_normal = ExtResource("12_22my7")
script = ExtResource("11_s1h2m")
description = "C'est le trésor de Barbe Drue"

[node name="ParcheminBarbeDrue" type="TextureButton" parent="Items"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
tooltip_text = "Parchemin de Barbe Drue"
texture_normal = ExtResource("13_qv6l0")
script = ExtResource("11_s1h2m")
description = "C'est le parchemin du trésor de Barbe Drue.

Je ne comprends rien à ce qui est écrit dessus."

[node name="TresorBarbeDrueNet" type="TextureButton" parent="Items"]
layout_mode = 0
offset_right = 55.0
offset_bottom = 48.0
tooltip_text = "Trésor de Barbe Drue"
texture_normal = ExtResource("12_22my7")
script = ExtResource("11_s1h2m")
description = "C'est le trésor de Barbe Drue. 
Mais la taxe sur les gains affairant à la piraterie est passée par la. "

[node name="Console" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 400.0
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="RichTextLabel" type="RichTextLabel" parent="Console"]
layout_mode = 2
scroll_following = true

[connection signal="pressed" from="Dialog/MarginContainer/VBoxContainer/CloseDialogButton" to="." method="_on_close_dialog_button_pressed"]
[connection signal="pressed" from="DialogAndImg/Panel/MarginContainer/VBoxContainer/CloseDialogButton" to="." method="_on_close_dialog_and_img_button_pressed"]
[connection signal="pressed" from="Input/Panel/MarginContainer/VBoxContainer/ValidateButton" to="." method="_on_validate_input_button_pressed"]
[connection signal="pressed" from="InputYesNo/Panel/MarginContainer/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="InputYesNo/Panel/MarginContainer/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/HBoxContainer/BagButton" to="Menu" method="_on_bag_button_pressed"]
[connection signal="pressed" from="Bag/Panel/MarginContainer/VBoxContainer/CloseButton" to="Bag" method="_on_close_button_pressed"]
